[package]
name = "gm-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "1.3.1"
borsh-derive = "1.3.1"
solana-program = "=1.18.5"

[dev-dependencies]
solana-program-test = "=1.18.5"
solana-sdk = "=1.18.5"

[lib]
name = "gm_program"
crate-type = ["cdylib", "lib"]